A few more fixes for mobile, adding github attribution at the bottom.

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </section>
   
     <footer>
-      Designed by JC Kirst * Stay hungry, stay foolish
+      Designed by JC Kirst * Stay hungry, stay foolish. Code available on <a href="https://github.com/jskirst/eleanorgracevineyards">GitHub</a>.
     </footer>
   </div>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
