--- a/index.html
+++ b/index.html
@@ -52,25 +52,31 @@
       <h2>About the Vineyard</h2>
       <div class="description">
         <div class="blurb">
-          <p>Eleanor Grace Vineyards was started in 2002 in the Bay Area town of Woodside, California. It sits on the high sloping hills surrounding the Bear Gulch Resevoir... Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p style="width: 80%; max-width: 750px; margin: 20px auto;">Eleanor Grace Vineyards was started in 2002 in the Bay Area town of Woodside, California. It sits on the high sloping hills surrounding the Bear Gulch Resevoir. It is separated into 4 blocks, all planted with Pinot Noir.</p>
         </div>
         <div class="photo" id="map-canvas"></div>
+        <p>418 Eleanor Drive, Woodside, California
       </div>
       <hr class="horizon" style="width: 40%; margin: 30px auto;">
       <h2>About the Vintner</h2>
       <div class="description">
         <div class="blurb">
-          <p>
+          <p style="width: 80%; max-width: 750px; margin: 20px auto;">
             John Kirst, Pennsylvania native, moved to sunny California in the 1970's to attend Stanford University and has stayed ever since.
             With the assistance of his patient and induldging wife and two kids, he has grown, harvested and bottled Eleanor Grace for the last 10 years.
             What may have started as a poorly advised choice in a new hobby has grown into a passion shared with friends and family. 
           </p>
         </div>
         <div class="photo" style="width: 120%; margin-left: -10%;">
-          <img src='images/momdad2.png' style="height: 250px;">
-          <img src='images/jen2.png' style="height: 250px;">
-          <img src='images/jc2.png' style="height: 250px;">
-          <img src='images/animals.png' style="height: 250px;">
+          <img src='images/momdad2.png'>
+          <img src='images/jen2.png'>
+          <img src='images/jc3.png'>
+          <img src='images/animals2.png'>
+        </div>
+        <div class="social">
+          <p>You can find us online at:</p>
+          <p><a href="https://www.facebook.com/pages/Eleanor-Grace-Vineyards/142724495474" target="_blank">Eleanor Grace Facebook Page</a></p>
+          <p><a href="https://twitter.com/johnrkirst" target="_blank">John Kirst on Twitter</a></p>
         </div>
       </div>
     </section>
