--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     
     <section id="about">
-      <h2>About the Vineyard</h2>
+      <h2 class="header">About the Vineyard</h2>
       <div class="description">
         <div class="blurb">
           <p style="width: 80%; max-width: 750px; margin: 20px auto;">Eleanor Grace Vineyards was started in 2002 in the Bay Area town of Woodside, California. It sits on the high sloping hills surrounding the Bear Gulch Resevoir. It is separated into 4 blocks, all planted with Pinot Noir.</p>
@@ -85,8 +85,10 @@
       <div class="alert">
         <h3>Coming Soon...</h3>
       </div>
-      <h2>Vintages</h2>
-      <h4>2003 - 2012</h4>
+      <div class="header">
+        <h2>Vintages</h2>
+        <h4>2003 - 2012</h4>
+      </div>
       <div class="list">
         <div class="item">
           <div class="photo">
@@ -135,7 +137,7 @@
       <div class="alert">
         <h3>Coming Soon...</h3>
       </div>
-      <h2>History of Eleanor Grace</h2>
+      <h2 class="header">History of Eleanor Grace</h2>
       <div class='timeline'>
         <div class="line"></div>
       
@@ -184,7 +186,7 @@
       <div class="alert">
         <h3>Coming Soon...</h3>
       </div>
-      <h2>Friends of Eleanor Grace</h2>
+      <h2 class="header">Friends of Eleanor Grace</h2>
       <div class="list">
         <div class="item"></div>
       </div>
